<resources>
    <string name="app_name">Jumping Plumber</string>
    <string name="score">Your Score : %d</string>
    <string name="time">Time : %d</string>
    <string name="high_score">High Score : %d</string>
    <string name="btn_start">START</string>
    <string name="time_over">GAME OVER !!!</string>
    <string name="btn_time">TIME ATTACK</string>
    <string name="btn_Endurance">ENDURANCE</string>
    <string name="up">"Life : "</string>
</resources>
