<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/scoreLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/score"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textSize="18sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/gameFrame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/backgroundImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/b"
            tools:ignore = "ContentDescrition"/>

        <ImageView
            android:id="@+id/mario"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/mario10"
            tools:ignore = "ContentDescrition"/>

        <ImageView
            android:id="@+id/missile"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/black"
            tools:ignore = "ContentDescrition"/>

        <ImageView
            android:id="@+id/piece"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/piece"
            tools:ignore = "ContentDescrition"/>

        <ImageView
            android:id="@+id/champi"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@drawable/champi"
            tools:ignore = "ContentDescrition"/>

        <ImageView
            android:id="@+id/ground"
            android:layout_width="match_parent"
            android:layout_height="55dp"

            android:layout_gravity="bottom" />

        <LinearLayout
            android:id="@+id/startLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/titleLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:text="@string/app_name"
                android:textSize="26sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/startScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/highScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/high_score"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="startGame"
                android:text="@string/btn_start" />

        </LinearLayout>

    </FrameLayout>
</LinearLayout>